packages/typ/tests/fixtures/diagnostics/0016_core_annotated_value_mismatch_02.ml.expected
File "0016_core_annotated_value_mismatch_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0016_core_annotated_value_mismatch_02 is not a valid module name.

File "0016_core_annotated_value_mismatch_02.ml", line 1, characters 18-19:
1 | let beta : bool = 0
                      ^
Error: The constant 0 has type int but an expression was expected of type
         bool
