packages/typ/tests/fixtures/diagnostics/0016_core_annotated_value_mismatch_02.ml
let beta : bool = 0
